# mlx-parallm

./: .gitignore  README.md  demo.py  demo_streaming.py  pyproject.toml
mlx_parallm/: __init__.py  sample_utils.py  utils.py
tests/: conftest.py  test_batch_streaming.py
