[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-parallm"
version = "0.2.0"
description = "Batched KV caching for fast parallel inference on Apple Silicon via MLX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Will Brown", email = "willccbb@gmail.com"},
]
maintainers = [
    {name = "LibraxisAI Team"},
]
keywords = ["mlx", "apple-silicon", "llm", "inference", "batching", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mlx>=0.20.0",
    "mlx-lm>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/LibraxisAI/mlx-parallm"
Repository = "https://github.com/LibraxisAI/mlx-parallm"
Issues = "https://github.com/LibraxisAI/mlx-parallm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlx_parallm*"]

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".idea",
    "__pycache__",
    ".pytest_cache",
    "*.egg-info",
    "demo.ipynb",    # notebook (JSON format)
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults (intentional pattern)
    "C901",   # too complex (legacy code)
]

[tool.ruff.lint.isort]
known-first-party = ["mlx_parallm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_model: marks tests that require a loaded model",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]
